--- a/index.html
+++ b/index.html
@@ -456,14 +456,9 @@
 
         <div id="radiation-animation">
     <h2>Radiation Beam Simulation</h2>
-    <p>Okay, I understand completely. You want **only** the requested statement rewritten to be more concise and directly tie samRad Health Technologies to the simulation from the start, as discussed previously, without including any additional code or other sections.
-
----
-
-## Radiation Beam Simulation
-
-</p> At samRad Health Technologies, our mission centers on **precision**—a quality vividly demonstrated in this radiation beam simulation. The gantry, the rotating arm of a radiation machine, precisely delivers a targeted beam to the tumor, minimizing exposure to healthy tissue. This animation highlights the crucial role of accurate targeting in modern cancer treatment and is a core example of the advancements we bring to cancer care.</p>
     
+    <p>At samRad Health Technologies, our mission centers on <strong>precision</strong>—a quality vividly demonstrated in this radiation beam simulation. The gantry, the rotating arm of a radiation machine, precisely delivers a targeted beam to the tumor, minimizing exposure to healthy tissue. This animation highlights the crucial role of accurate targeting in modern cancer treatment and is a core example of the advancements we bring to cancer care.</p> 
+   
     <div id="animation-container-horizontal">
         <div class="gantry-circle">
             <div class="gantry-head"></div>
